# linux

./: README.md  curl_zip.sh  dir_creator.sh  matan.md
eighth/: Readme.md
eighth/first/: Makefile  main.cc
eighth/fourth/: Readme.md  fourth.sh
eighth/second/: Makefile  Readme.md  main  main.cc  my_program
eighth/third/: Readme.md  install.sh  main.hh  meson.build
fifth/: first.sh  forth.sh  my-dir  second.sh  third.sh
fifth/forth/: Readme.md  read_from_fifo.sh  write_fifo.sh
fifth/second/: second.sh  start_n_times.sh
first/: first.sh
fourth/: third.sh
fourth/first/: first.sh
fourth/fourth/: fourth.md  fourth.sh  input.xml
fourth/second/: second.sh
ninth/: first.sh  second.sh
ninth/first/: Readme.md  getpid_example  getpid_example.c  getpid_example.cc
ninth/fourth/: Readme.md  child_namespace.sh  namespace.sh  namespace_example  namespace_example.c
ninth/second/: Readme.md  fork_exec_wait_example  fork_exec_wait_example.c
ninth/third/: Readme.md  env_example  env_example.c  third.sh
second/: args.sh  first.sh  forth.sh  second.sh  temp.txt
seventh/: Readme.md
sixth/: conditional_compilation.cpp  first.sh  fourth.sh  second.sh  third.sh
tenth/: Readme.md  a.s  build_and_run.sh  first  first.cpp  forth  forth.cpp  second  second.cpp  third  third.cpp
third/: open.sh
third/first/: first.sh
third/fourth/: FOURTH.SH  RENAME_FILES.SH
third/second/: Readme.md  second.sh
third/third/: third.sh
